Fix styling issues with the controls overflowing off-screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,6 +13,7 @@
   align-items: center;
   padding: 5%;
   background-color: aliceblue;
+  height: 100vh;
 }
 
 
@@ -64,6 +65,9 @@
   border: 1.5px solid black;
   background-color: white;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .controls > button:hover{
@@ -71,5 +75,5 @@
 }
 
 h2{
-  font-size: 50px;
+  font-size: 35px;
 }
